...
    <string name="menu_data_clear_bookmarks_confirmation">Forum bookmarks will be deleted</string>
    <string name="menu_data_clear_favorites">Clear favorites</string>
    <string name="menu_data_clear_favorites_title">Clear favorites?</string>
    <string name="menu_data_clear_favorites_confirmation">Favorite topics and torrent will be deleted</string>
    <string name="menu_data_clear_history">Clear history</string>
    <string name="menu_data_clear_history_title">Clear history?</string>
    <string name="menu_data_clear_history_confirmation">Search history, suggests and visited topics will be deleted</string>
    <string name="menu_label_data">Data</string>
    <string name="menu_label_misc">Other</string>
    <string name="menu_label_settings">Settings</string>
    <string name="menu_misc_about">About</string>
    <string name="menu_misc_contacts">Send feedback</string>
    <string name="menu_misc_privacy">Privacy policy</string>
...
